# OctoPrint-Setuptools

./: .editorconfig  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
octoprint_setuptools/: __init__.py
